--- a/back_end/package.json
+++ b/back_end/package.json
@@ -16,7 +16,10 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "express-async-handler": "^1.2.0",
+    "minio": "^8.0.5",
     "mongoose": "^8.17.1",
-    "nodemon": "^3.1.10"
+    "multer": "^2.0.2",
+    "nodemon": "^3.1.10",
+    "uuid": "^11.1.0"
   }
 }
