--- a/back_end/.env
+++ b/back_end/.env
@@ -1,4 +1,5 @@
 MONGODB_URI=mongodb://127.0.0.1:27011/dbZelij?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.1.1
 MINIO_PORT=9000
+JWT_SECRET=tjndbjfllosnjb998812jbdvjbjhjhvb
 MINIO_ACCESS_KEY=minioadmin
 MINIO_SECRET_KEY=minioadmin
