--- a/back_end/package.json
+++ b/back_end/package.json
@@ -12,10 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "express-async-handler": "^1.2.0",
+    "express-jwt": "^8.5.1",
+    "jsonwebtoken": "^9.0.2",
     "minio": "^8.0.5",
     "mongoose": "^8.17.1",
     "multer": "^2.0.2",
